# mariadb_modern_cpp

./: .gitmodules  CMakeLists.txt  README.md
fuzz_test/: CMakeLists.txt  sql_test.cpp
hdr/: mariadb_modern_cpp.hpp
hdr/mariadb_modern_cpp/: errors.h  errors.hpp  errors.hpp~  errors.h~
hdr/mariadb_modern_cpp/utility/: function_traits.hpp
test/: CMakeLists.txt  concurrent_test.cpp  connect_test.cpp  insert_test.cpp  select_test.cpp  test_config.hpp  test_db.sql  transaction_test.cpp
